@@ -6,6 +6,7 @@ Date: 27.01.2025
     - Recipes when bobs are enabled.
     - Achivements the survive hit points name change.
     - All items with fusion reactor from [space-age] should now be temp repalced with fission reactor mk1.
+    - Added "par-armour-tech-5" to prerequisite on "par-night-immunity-tech-1" removed on "par-night-immunity-tech-2" so it easier to find.
   Features:
     - Made Nanobots2 work as old nanobots.
   Scripting:
